sas-core/main/default/objects/Redeemed_Compensation_Card__c/Redeemed_Compensation_Card__c.object-meta.xml
<CustomObject>
    <label>Redeemed Compensation Card</label>
    <nameField>
        <label>Card Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redeemed Compensation Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>