sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>6</length>
    <type>Text</type>
</CustomField>