sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The claim this compensation was paid out in relation to.</description>
    <inlineHelpText>The claim this compensation was paid out in relation to.</inlineHelpText>
    <label>Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Compensation Cards</relationshipLabel>
    <relationshipName>Compensation_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>