sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Compensation_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Card_Number__c</fullName>
    <label>Compensation Card Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>