sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>