sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>