sas-core/main/default/objects/Redeemed_Compensation_Card__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VDBCOMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>